objects/Lead/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Non Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>