objects/Lead/fields/Call_1__c.field-meta.xml
<CustomField>
    <fullName>Call_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call 1</label>
    <type>Checkbox</type>
</CustomField>