objects/Lead/fields/Capable_of_Buying_Container__c.field-meta.xml
<CustomField>
    <fullName>Capable_of_Buying_Container__c</fullName>
    <label>Capable of Buying Containers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>