objects/Lead/fields/CheckLeadConversion__c.field-meta.xml
<CustomField>
    <fullName>CheckLeadConversion__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CheckLeadConversion</label>
    <type>Checkbox</type>
</CustomField>