objects/Lead/fields/Customer_Segment_By_Operation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_By_Operation__c</fullName>
    <label>Customer Segment - By Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>For-Hire: 10+ Fleet</fullName>
            </value>
            <value>
                <fullName>For-Hire: &lt;10 Fleet</fullName>
            </value>
            <value>
                <fullName>Private 10+ Fleet</fullName>
            </value>
            <value>
                <fullName>Private less than 10 Fleet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Owner-Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>