objects/Lead/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>