objects/Lead/fields/Designation_of_the_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Designation_of_the_Primary_Contact__c</fullName>
    <label>Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>