objects/Lead/fields/Designation_SecondaryContactPerson__c.field-meta.xml
<CustomField>
    <fullName>Designation_SecondaryContactPerson__c</fullName>
    <description>Please Fill Designation of Secondary Contact Person</description>
    <label>Designation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>