objects/Lead/fields/DNB_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>DNB_Risk_Flag__c</fullName>
    <label>DNB Risk Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>