objects/Lead/fields/e_Company_Facebook__c.field-meta.xml
<CustomField>
    <fullName>e_Company_Facebook__c</fullName>
    <label>Company Facebook</label>
    <type>Url</type>
</CustomField>