objects/Lead/fields/e_Personal_Facebook__c.field-meta.xml
<CustomField>
    <fullName>e_Personal_Facebook__c</fullName>
    <label>Personal Facebook</label>
    <type>Url</type>
</CustomField>