objects/Lead/fields/Email_SecondaryContactPerson__c.field-meta.xml
<CustomField>
    <fullName>Email_SecondaryContactPerson__c</fullName>
    <description>Please Fill Email of Secondary Contact Person</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>