objects/Lead/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro. Call 1</fullName>
            </value>
            <value>
                <fullName>Mail 1</fullName>
            </value>
            <value>
                <fullName>Intro. Call 2</fullName>
            </value>
            <value>
                <fullName>Mail 2</fullName>
            </value>
            <value>
                <fullName>Intro. Call 3</fullName>
            </value>
            <value>
                <fullName>Final Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>