objects/Lead/fields/Est_No_of_Trucks_Trailers_Est_No__c.field-meta.xml
<CustomField>
    <fullName>Est_No_of_Trucks_Trailers_Est_No__c</fullName>
    <formula>Estimated_Number_of_Trucks__c + Trailers_Estimated_Numbers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. No. of Trucks+Trailers Est. No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>