objects/Lead/fields/Estimated_Number_of_Trucks__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Trucks__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Number of Trucks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>