objects/Lead/fields/Existing_Brands_in_Use_in_trailer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Brands_in_Use_in_trailer__c</fullName>
    <label>Existing Brands in Use in trailer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>