objects/Lead/fields/Existing_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Existing_Supplier__c</fullName>
    <label>Existing Supplier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>