objects/Lead/fields/Extension_2__c.field-meta.xml
<CustomField>
    <fullName>Extension_2__c</fullName>
    <label>Extension</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>