objects/Lead/fields/Fax_c__c.field-meta.xml
<CustomField>
    <fullName>Fax_c__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>