objects/Lead/fields/Fleet_Size_Up__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size_Up__c</fullName>
    <label>Fleet Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 5</fullName>
            </value>
            <value>
                <fullName>6 to 50</fullName>
            </value>
            <value>
                <fullName>51 to 100</fullName>
            </value>
            <value>
                <fullName>more than 100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>