objects/Lead/fields/Fleet_Type__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Type__c</fullName>
    <label>Fleet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck/Trailer</fullName>
            </value>
            <value>
                <fullName>Oil Tankers</fullName>
            </value>
            <value>
                <fullName>Tipper</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>