objects/Lead/fields/Hour_From_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Hour_From_Created_Time__c</fullName>
    <formula>FLOOR(( NOW() - CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour From Created Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>