objects/Lead/fields/IText_Ans__c.field-meta.xml
<CustomField>
    <fullName>IText_Ans__c</fullName>
    <label>IText Ans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>