objects/Lead/fields/Itext_que__c.field-meta.xml
<CustomField>
    <fullName>Itext_que__c</fullName>
    <label>IText Que</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>