objects/Lead/fields/iText_Response__c.field-meta.xml
<CustomField>
    <fullName>iText_Response__c</fullName>
    <label>iText Response</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>