objects/Lead/fields/iText_Send__c.field-meta.xml
<CustomField>
    <fullName>iText_Send__c</fullName>
    <label>iText Send</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>