objects/Lead/fields/Mail_1__c.field-meta.xml
<CustomField>
    <fullName>Mail_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail 1</label>
    <type>Checkbox</type>
</CustomField>