objects/Lead/fields/Monthly_Consumption_of_Tyres__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Consumption_of_Tyres__c</fullName>
    <label>Monthly Consumption of Tyres</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 50(Retail)</fullName>
                <label>Less than 50 (Retail)</label>
            </value>
            <value>
                <fullName>Less than 100</fullName>
                <label>51 to 100/Less than 100</label>
            </value>
            <value>
                <fullName>101 to 200</fullName>
            </value>
            <value>
                <fullName>more than 200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>