objects/Lead/fields/Need_To_Inject__c.field-meta.xml
<CustomField>
    <fullName>Need_To_Inject__c</fullName>
    <label>Need To Inject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>