objects/Lead/fields/Notes_if_any__c.field-meta.xml
<CustomField>
    <fullName>Notes_if_any__c</fullName>
    <label>Notes (if any)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>