objects/Lead/fields/Own_Fitment_Facility__c.field-meta.xml
<CustomField>
    <fullName>Own_Fitment_Facility__c</fullName>
    <label>Own Fitment Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>