objects/Lead/fields/Payments_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payments_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>