objects/Lead/fields/Phone_SecondaryContactPerson__c.field-meta.xml
<CustomField>
    <fullName>Phone_SecondaryContactPerson__c</fullName>
    <description>Please Fill Phone Number of Secondary Contact Person</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>