objects/Lead/fields/Prospect_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Profile_Link__c</fullName>
    <label>Prospect Profile Link</label>
    <type>TextArea</type>
</CustomField>