objects/Lead/fields/RRID__c.field-meta.xml
<CustomField>
    <fullName>RRID__c</fullName>
    <label>RRID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>