objects/Lead/fields/Secondary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_First_Name__c</fullName>
    <label>Secondary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>