objects/Lead/fields/Secondary_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Last_Name__c</fullName>
    <label>Secondary Contact Last  Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>