objects/Lead/fields/Secondary_Contact_Person_with_mail__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Person_with_mail__c</fullName>
    <description>Fill Secondary Contact Person Name</description>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>