objects/Lead/fields/SMS_Click__c.field-meta.xml
<CustomField>
    <fullName>SMS_Click__c</fullName>
    <label>SMS Click</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>