objects/Lead/fields/SMS_Click_Text__c.field-meta.xml
<CustomField>
    <fullName>SMS_Click_Text__c</fullName>
    <label>SMS Click</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>