objects/Lead/fields/SMS_Sent_Text__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent_Text__c</fullName>
    <label>SMS Sent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>