objects/Lead/fields/tdc_cti__Claimed__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claimed</label>
    <type>Checkbox</type>
</CustomField>