objects/Lead/fields/tdc_cti__Unclaimed_Lead__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Unclaimed_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unclaimed Lead</label>
    <type>Checkbox</type>
</CustomField>