objects/Lead/fields/tdc_tvte__disposable__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__disposable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disposable</label>
    <type>Checkbox</type>
</CustomField>