objects/Lead/fields/tdc_tvte__Phone_Verify_Result_Msg__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Phone_Verify_Result_Msg__c</fullName>
    <label>Number Verify Result Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>