objects/Lead/fields/tdc_tvte__Reason__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Reason__c</fullName>
    <label>Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>