objects/Lead/fields/tdc_tvte__Sendex__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Sendex__c</fullName>
    <label>Sendex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>