objects/Lead/fields/tdc_tvte__Status_of_verification__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Status_of_verification__c</fullName>
    <formula>IF(tdc_tvte__Success__c == true,
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Deliverable2.png&apos;, &apos;Deliverable&apos;),
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Non-deliverable2.png&apos;, &apos;Not Deliverable&apos;),
&apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Risky2.png&apos;, &apos;Risky&apos;),
&apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Unknown2.png&apos;, &apos;Unknown&apos;), tdc_tvte__Result__c)
, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/img/Notverified1.png&apos;, &apos;Not Verified Yet&apos;))</formula>
    <label>Status Of Email Verification</label>
    <type>Text</type>
</CustomField>