objects/Lead/fields/tdc_tvte__Success__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>