objects/Lead/fields/tdc_tvte__Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__Type__c</fullName>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>