objects/Lead/fields/tdc_tvte__user__c.field-meta.xml
<CustomField>
    <fullName>tdc_tvte__user__c</fullName>
    <label>user</label>
    <length>100</length>
    <type>Text</type>
</CustomField>