objects/Lead/fields/Total_Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Vehicles__c</fullName>
    <label>Total Number of Vehicles</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>below 50</fullName>
            </value>
            <value>
                <fullName>50-80</fullName>
            </value>
            <value>
                <fullName>Betewwn 80-120</fullName>
            </value>
            <value>
                <fullName>Between 120 -200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>