objects/Lead/fields/Trailers_Estimated_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Trailers_Estimated_Numbers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trailers Estimated Numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>