objects/Lead/fields/Type_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Customer__c</fullName>
    <label>Type of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Customer/Reseller</fullName>
            </value>
            <value>
                <fullName>Retail_Customer</fullName>
                <label>Retail Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>