objects/Lead/fields/US_DOT__c.field-meta.xml
<CustomField>
    <fullName>US_DOT__c</fullName>
    <label>US DOT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>