objects/Lead/fields/WhatsApp_No__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_No__c</fullName>
    <label>WhatsApp No</label>
    <type>Phone</type>
</CustomField>