objects/Lead/validationRules/AlternatePhoneNoValidation_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>AlternatePhoneNoValidation_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Alternate_Phone__c )),NOT(REGEX( Alternate_Phone__c , &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Alternate_Phone__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Alternate Phone.</errorMessage>
</ValidationRule>