objects/Lead/validationRules/ExistingCustomerReferenceBasedOnPicklist.validationRule-meta.xml
<ValidationRule>
    <fullName>ExistingCustomerReferenceBasedOnPicklist</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( LeadSource , &quot;Existing_Cust_Reference&quot;),   ISBLANK(  Reffering_Existing_Customer_Name__c  )  )</errorConditionFormula>
    <errorDisplayField>Reffering_Existing_Customer_Name__c</errorDisplayField>
    <errorMessage>Please Enter Existing Customer Reference Name.</errorMessage>
</ValidationRule>