objects/Lead/validationRules/Fax2NoValidation_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax2NoValidation_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Fax_c__c  )),NOT(REGEX( Fax_c__c , &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Fax_c__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Fax.</errorMessage>
</ValidationRule>