objects/Lead/validationRules/Phone_SecNoValidation_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_SecNoValidation_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Phone_SecondaryContactPerson__c)),NOT(REGEX( Phone_SecondaryContactPerson__c, &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>Phone_SecondaryContactPerson__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Phone Number</errorMessage>
</ValidationRule>