objects/Lead/validationRules/PhoneNoValidation_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNoValidation_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Phone )),NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;)) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter 10 digit Phone Number</errorMessage>
</ValidationRule>