objects/Lead/validationRules/PhoneOrEmail_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneOrEmail_VR</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Phone ) , ISBLANK( Email ))</errorConditionFormula>
    <errorMessage>Please enter either Phone or Email under Primary Contact Details Section</errorMessage>
</ValidationRule>