objects/Lead/validationRules/WhatsappNoValidation_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>WhatsappNoValidation_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( WhatsApp_No__c )),NOT(REGEX( WhatsApp_No__c , &quot;(\\d){10}&quot;) )
)</errorConditionFormula>
    <errorDisplayField>WhatsApp_No__c</errorDisplayField>
    <errorMessage>Please enter 10 digit Whatsapp Number</errorMessage>
</ValidationRule>