objects/Lead/listViews/B_Grade_Leads.listView-meta.xml
<ListView>
    <fullName>B_Grade_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>pi__grade__c</columns>
    <columns>Need_To_Inject__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>tdc_tvte__Phone_Verification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pi__grade__c</field>
        <operation>contains</operation>
        <value>B</value>
    </filters>
    <filters>
        <field>Need_To_Inject__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>tdc_tvte__Phone_Verification_Status__c</field>
        <operation>equals</operation>
        <value>Invalid</value>
    </filters>
    <label>B Grade Leads</label>
</ListView>