objects/Lead/listViews/CTI_Incoming_Call_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>CTI_Incoming_Call_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>CTI Incoming Call Queue</label>
    <queue>CTI_Incoming_Call_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>