objects/Lead/listViews/Pardot_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>Pardot_Lead_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Pardot Lead</label>
    <queue>Pardot_Lead</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>